--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 env:
   RAILS_ENV: production
@@ -16,20 +17,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Login to DockerHub
+      - name: Login to GitHub container registry
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Set DOCKER_IMAGE Environment Variable
-        run:  echo "DOCKER_IMAGE=dfedigital/eyfsreform:${{ github.sha }}" >> $GITHUB_ENV
+        run:  echo "DOCKER_IMAGE=ghcr.io/dfe-digital/ghre-eyfs-cms-alpha:${{ github.sha }}" >> $GITHUB_ENV
 
-      - name: Build and push docker image to DockerHub
+      - name: Build and push docker image to GitHub container registry
         id: docker_build
         uses: docker/build-push-action@v2
         with:
